--- a/mobile/fair_edu_mobile/pubspec.yaml
+++ b/mobile/fair_edu_mobile/pubspec.yaml
@@ -33,75 +33,64 @@ dependencies:
   flutter_localizations:
     sdk: flutter
 
-  # Cupertino Icons
-  cupertino_icons: ^1.0.8
+  intl: 0.19.0
 
-  # Riverpod
+  # riverpod
   hooks_riverpod: 2.5.2
   flutter_hooks: 0.20.5
   collection: 1.18.0
 
-  # Fonts
   google_fonts: 6.2.1
+  # google_sign_in: 6.2.1
 
   # Navigation
   go_router: 14.2.6
   phosphor_flutter: ^2.1.0
   recase: 4.1.0
 
-  # Form Validation
+  # flutter_keyboard_visibility: 6.0.0
   form_field_validator: 1.1.0
 
-  # Utilities
   gap: 3.0.1
   phone_numbers_parser: 9.0.1
+
   intersperse: 2.0.0
+
   loading_animation_widget: 1.3.0
 
-  # Time
+  # time
   time_machine: 0.9.17
 
-  # Annotations
   freezed_annotation: 2.4.4
   json_annotation: 4.9.0
   riverpod_annotation: 2.3.5
-
-  # Media
   image_picker: 1.1.2
   path_provider: 2.1.4
   flutter_svg: 2.0.10
-
-  # Logging
   logger: 2.4.0
 
-  # Chat UI
   flutter_chat_ui: 1.6.15
 
-  # Database
+  # The following adds the Cupertino Icons font to your application.
+  # Use with the CupertinoIcons class for iOS style icons.
+  cupertino_icons: ^1.0.8
   drift: ^2.21.0
-
-  # UUID
   uuid: 4.5.1
-
-  # Faker
   faker: 2.2.0
 
-  # WebView
-  webview_flutter: ^4.0.6
-  webview_flutter_wkwebview: ^3.16.0
-
-  # XML
-  xml: ^6.1.0
-
-  # Fairedu Client
   fairedu_client:
     path: packages/fairedu-client
 
-  # Scribble
+  webview_flutter: ^4.0.6
+
+  xml: ^6.1.0
+  webview_flutter_wkwebview: ^3.16.0
+
   scribble:
     git:
       url: git@github.com:doss-eeic/2024-07-scribble.git
       ref: main
+  # path: ../../2024-07-scribble
 
 dev_dependencies:
   flutter_test:
@@ -122,9 +111,15 @@ dev_dependencies:
   envied_generator: 0.5.4
   freezed: 2.5.7
   json_serializable: 6.8.0
+
   riverpod_generator: 2.4.3
+
+  # riverpod_generator:
+  #   git:
+  #     url: ssh://git@github.com/chrg1001/riverpod.git
+  #     ref: fix-#3687
+  #     path: packages/riverpod_generator
   go_router_builder: 2.7.1
-  drift_dev: ^2.21.0
 
   # Icons
   flutter_launcher_icons: 0.13.1
@@ -141,6 +136,9 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+    - packages/time_machine/data/cultures/cultures.bin
+    - packages/time_machine/data/tzdb/tzdb.bin
 
   # To add assets to your application, add an assets section, like this:
   # assets:
