feat: 順番おかしい

--- a/mobile/fair_edu_mobile/pubspec.yaml
+++ b/mobile/fair_edu_mobile/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   webview_flutter: ^4.0.6
   xml: ^6.1.0
   webview_flutter_wkwebview: ^3.16.0
+  auto_scroll: ^0.2.0
 
   # Riverpod
   hooks_riverpod: 2.5.2
